--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,5 +14,9 @@
     "webpack": "^5.46.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "axios": "^0.19.2",
+    "chartist": "^0.11.4"
   }
 }
