--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,15 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --watch-content-base --open",
-    "build": "./node_modules/.bin/webpack --mode=production --output ./main.js",
+    "build": "webpack --mode=production --output ./main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^5.46.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "axios": "^0.19.2",
