--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": ".eslintrc.js",
   "scripts": {
     "start": "nodemon --watch backend --exec babel-node backend/server.js",
-    "build": "rm -rf dest && babel backend -d dist",
+    "build": "rm -rf dist && babel backend -d dist && cd frontend && npm install && npm run build",
     "serve": "node dist/server.js",
     "heroku-prebuild": "cd frontend && npm install --dev",
     "heroku-postbuild": "npm run build && cd frontend && npm install && npm run build"
